# tinny

./: .gitattributes  .gitignore  LICENSE  README.md  TODO  TODO.md  pyproject.toml  requirements.txt
docs/: dl.tex
lab01/: lab1.ipynb
lab03/: lab3.ipynb
lab04/: lab4.ipynb
lab05/: lab5.ipynb
lab06/: lab6.ipynb
lab08/: lab8.ipynb
lab09/: lab9.ipynb
lab10/: lab10.ipynb
lab12/: lab12.ipynb
lab13/: lab13.ipynb
lab2/: lab2.ipynb
notebooks/: README.md  im2col.py  mnist_ae.ipynb  mnist_cnn.ipynb  mnist_dbn.ipynb  mnist_gan.ipynb  mnist_mlp.ipynb  pfn-tutorial.ipynb  requirements.txt
notebooks/course/: README.md
notebooks/course/lab01/: lab1.ipynb
notebooks/course/lab08/: lab8_empty.ipynb
notebooks/course/lab09/: lab9_empty.ipynb
notebooks/course/lab10/: lab10_empty.ipynb
notebooks/course/lab11/: lab11_empty.ipynb
notebooks/course/lab12/: lab12_empty.ipynb
notebooks/course/lab13/: lab13_empty.ipynb
notebooks/lab08/: lab8.ipynb
notebooks/lab13/: lab13.ipynb
notebooks/tutorials/pfn/: pfn-tutorial-empty.ipynb  pfn-tutorial.ipynb
notebooks/tutorials/stat-modeling/: obesity_levels_estimation.ipynb  statsmodels_example.ipynb
src/corenn/: ebm.py  utils.py
src/corenn/nn/: _layers.py  optim.py
src/nncore/: ebm.py  utils.py
src/nncore/nn/: _layer.py  optim.py
src/tinny/: __init__.py  _core.py  ebm.py  nn.py  plot.py  utils.py
src/tinny/nn/: optim.py
tests/: test_layer_gradients.py
