[project]
name = "tinny"
version = "0.1.0"
description = "A minimal neural network library in NumPy"
readme = "README.md"
authors = [
    { name = "Bartosz Hanc", email = "bartosz.hanc02@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
experimental = [
    "cupy-cuda12x>=13.6.0",
    "mnists>=0.4.1",
]


[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.142.1",
    "pytest>=8.4.2",
]
